[gd_scene load_steps=9 format=2]

[ext_resource path="res://levels/text.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/ending/ending.gd" type="Script" id=2]
[ext_resource path="res://sprites/icon.png" type="Texture" id=3]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://levels/ending/credits.gd" type="Script" id=5]
[ext_resource path="res://sprites/player_walk_mirror.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Ending" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" parent="." instance=ExtResource( 1 )]
content = [ "This is the first line", "This is the second line", "Third line", "Fourth line", "End" ]

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_left = 176.47
margin_top = 75.9598
margin_right = 294.47
margin_bottom = 185.96
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="Control"]
margin_left = 492.732
margin_top = 235.486
margin_right = 854.732
margin_bottom = 345.486
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
content = [ "Development Team", "", "Lu√≠s Fonseca - Unicorn", "Ricardo Antunes - Programmer", "Martim Moniz - Art Director", "Mateus Pinho - Sound Director", "", "Thanks for playing!" ]
font = SubResource( 1 )
duration = 23.0
speed = 70.0

[node name="Sprite" type="Sprite" parent="Control/Credits"]
position = Vector2( -254.761, 123.388 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="closed" from="Text" to="." method="_on_Text_closed"]
[connection signal="end" from="Control/Credits" to="." method="_on_Credits_end"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
